frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demolabs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
  resources:
    requests:
      memory: "100Gi"
    spec:
      containers:
      - name: frontend
        image: nginx:not_exists
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html

      volumes:
      - name: frontend-html
        configMap:
          name: frontend-html
