backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demolabs
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678
