frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demolabs
spec:
  type: NodePort
  selector:
    app: frontend-v2
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
